--- a/history_html/history.css
+++ b/history_html/history.css
@@ -40,7 +40,7 @@
 body {padding:100px;}
 
 /*history part*/
-.history h2 {position: relative; font-size: 33px; color: #000; line-height: 1;}
+.history h2 {position: absolute; font-size: 33px; color: #000; line-height: 0;}
 .history h2:before {
   content:""; position: absolute;
   left:-48px; top:50%; transform: translateY(-50%);
@@ -48,13 +48,14 @@ body {padding:100px;}
   background:#fff; border: 5px solid #171312;
   box-sizing: border-box;}
 
-.history div {position: relative; padding: 0 0 0 48px;}
-.history div:before { content:""; position:absolute; left:8px; top:0;
+.history div {position: relative; padding: 10px 0px 0px 48px;}
+/*left side line*/
+.history div:before { content:""; position:absolute; left: 35px; top:0;
   width: 2px; height:100%; background:#ddd;}
 .history div:first-child:before { top:10px; height:calc(100% - 10px);}
 
 
-.history ol { padding: 20px 0 74px; }
+.history ol { padding: 15px 0 74px; }
 .history li {font-size: 17px; color:#000; line-height: 50px;  }
 
 
@@ -75,7 +76,7 @@ body {padding:100px;}
   /*creating the shake animation*/
     
 .shake:hover h2{
-    animation:  shake 0.8s  ;
+    animation:  shake 0.9s  ;
   }
   
   @keyframes shake{
@@ -93,3 +94,75 @@ body {padding:100px;}
       transform: translateX(0px);
     }
   }
+
+.slider{
+    width: 1000px;
+    height: 240px;
+    position: relative;
+    margin: 0 auto;
+    overflow: hidden; /* 현재 슬라이드 오른쪽에 위치한 나머지 슬라이드 들이 보이지 않도록 가림 */
+}
+.slider input[type=radio]{
+    display: none;
+}
+
+ul.imgs{
+  width: 300px;
+  height: 15px;
+  object-fit: cover;
+
+  padding: 0;
+  margin: 0;
+  list-style: none;    
+}
+ul.imgs li{
+  position: absolute;
+  left: 640px;
+  transition-delay: 0s; /* 새 슬라이드가 이동해 오는 동안 이전 슬라이드 이미지가 배경이 보이도록 지연 */
+
+  padding: 0;
+  margin: 0;
+}
+
+.bullets{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
+  z-index: 2;
+}
+.bullets label{
+  display: inline-block;
+  border-radius: 50%;
+  background-color: rgba(0,0,0,0.55);
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+/* 현재 선택된 불릿 배경 흰색으로 구분 표시 */
+.slider input[type=radio]:nth-child(1):checked~.bullets>label:nth-child(1){
+  background-color: #fff;
+}
+.slider input[type=radio]:nth-child(2):checked~.bullets>label:nth-child(2){
+  background-color: #fff;
+}
+.slider input[type=radio]:nth-child(3):checked~.bullets>label:nth-child(3){
+  background-color: #fff;
+}
+
+
+.slider input[type=radio]:nth-child(1):checked~ul.imgs>li:nth-child(1){
+  left: 0;
+  transition: 0.5s;
+  z-index:1;
+}
+.slider input[type=radio]:nth-child(2):checked~ul.imgs>li:nth-child(2){
+  left: 0;
+  transition: 0.5s;
+  z-index:1;
+}
+.slider input[type=radio]:nth-child(3):checked~ul.imgs>li:nth-child(3){
+  left: 0;
+  transition: 0.5s;
+  z-index:1;
+}
