--- a/labweb/projects/templates/projects/index.html
+++ b/labweb/projects/templates/projects/index.html
@@ -2,32 +2,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/projects.css">
-    <!--
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.core.min.css">
-    <link rel="stylesheet" href="node_modules/@glidejs/glide/dist/css/glide.theme.min.css"> 
-    -->
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="/"><img src="/static/images/logo/dalle1.png" class="img_logo"/></a>
-      </div>
-      <div class="name">INES</div> 
-      <div class="menu">
-        <ul class="ulnav">
-          <li>HOME</li>
-          <li>TEAM</li>
-          <li>RESEARCH</li>
-          <li>GALLERY</li>
-          <li>BLOG</li>
+    <!--네비게이션 바-->
+    <div class="header">
+        <div class="logoimg">
+            <img src="static/example_logo.png">
+        </div>
+        <h1 class="mainnav">iNES</h1>
+        <ul class="navbar">  
+            <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/main.html">HOME</a></li>
+            <li><a href="#">TEAM</a></li>
+            <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/publications.html">RESEARCH</a></li>
+            <li><a href="#">GALLERY</a></li>
+            <li><a href="https://kojungbeom.github.io/">BLOG</a></li>
         </ul>
-      </div>
-    </header>
-    <nav>
-      Projects (Article Piuctures)
-    </nav>
-    <section>
+    </div>
+	
+<!--대표 이미지 부분-->
+
+    <div class="main-image-section">
+       <img src="static/example2.jpg">
+    </div>
+    <div class="contents">
       {% if article_list %}
         {% for article in article_list %}
           <div class="article_picture">
@@ -42,10 +41,31 @@
           </div>
         {% endfor %}
       {% endif %}
-    </section>
-    <footer>
-      <p>&lt;footer&gt;(사이트 하단)</p>
-    </footer>
+    </div>   
   </body>
+  <!--footer-->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h3>iNES AI team</h3>
+                    <p>Address: 1234 Main Street, City Name, Country</p>
+                    <p>Phone: (123) 456-7890</p>
+                    <p>Email: info@company.com</p>
+                </div>
+
+                <div class="col">
+                    <h3>Quick Links</h3>
+                    <ul>
+                    <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/main.html">HOME</a></li>
+                    <li><a href="#">TEAM</a></li>
+                    <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/publications.html">RESEARCH</a></li>
+                    <li><a href="#">GALLERY</a></li>
+                    <li><a href="https://kojungbeom.github.io/">BLOG</a></li>
+                    </ul>
+                </div>
+            </div>            
+        </div> 
+    </div>
 </html>
   
