--- a/labweb/static/css/projects.css
+++ b/labweb/static/css/projects.css
@@ -13,36 +13,38 @@ a {
     object-fit:contain;
 }
 
-div.article_picture{
-    width: 419px;
-    height: 279px;
-    margin-bottom: 10px;
+.article_template{
+    width: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.article_picture{
+    width: 420px;
+    height: 280px;
     padding: 0;
     font-size: 20px; 
     text-align: center;
-    float: left;
     border: dotted #BDBDBD;
 }
-div.article_meta{
-    width: 628px;
-    height: 279px;
-    margin-bottom: 10px;
-    padding: 0;
-    font-size: 20px; 
+.article_meta{
+    width: 500px;
+    height: 280px;
+    margin: 0;
     align-items : center;
-    float: left;
     border: dotted #BDBDBD;
 }
-div.article_name{
-    width: 618px;
+.article_name{
+    width: 500px;
     height: 60px;
     margin: 0 auto;
     padding: 0;
     font-size: 20px; 
     border: dotted #BDBDBD;
 }
-div.article_tag{
-    width: 618px;
+.article_tag{
+    width: 500px;
     height: 20px;
     margin: 0 auto;
     margin-bottom: 10px;
@@ -50,47 +52,11 @@ div.article_tag{
     font-size: 10px; 
     border: dotted #BDBDBD;
 }
-div.article_abstract{
-    width: 618px;
-    height: 169px;
+.article_abstract{
+    width: 500px;
+    height: 170px;
     padding: 0;
     margin: 0 auto;
     font-size: 10px; 
     border: dotted #BDBDBD;
-}
-
-div.side1{
-    margin: 0 auto;
-    width: 180px;
-    height: 20px;
-    margin: 10px;
-    padding: 0px;
-    line-height: 20px;
-    font-size: 20px; 
-    text-align: center;
-    font-family: Nanum Gothic;
-}
-div.side2{
-    width: 180px;
-    height: 210px;
-    margin: 10px;
-    line-height: 40px;
-    border: dotted #BDBDBD;
-    font-family: Nanum Gothic;
-}
-ul.ulnav {
-    margin: 0; /* 위아래 margin 없이 */
-    height: 65px;
-    align-items: center;
-    display: flex;
-    border-top: 2px solid #000000;
-    border-bottom: 2px solid #000000;
-}
-ul.ulnav > li {
-    /*border: thick dotted #f44336;*/
-    text-align: center;
-    width: 140px;
-    font-size: 20px; 
-    display: inline-block; 
-    border: thick dotted rgba(0, 0, 0, 0.0);;
 }
