--- a/labweb/history/templates/history/index.html
+++ b/labweb/history/templates/history/index.html
@@ -1,87 +1,127 @@
-
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="/static/css/member.css">
+    <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/history.css">
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <a href="/"><img src="/static/images/logo/dalle1.png" class="img_logo"/></a>
+    <!--네비게이션 바-->
+    <div class="header">
+      <div class="logoimg">
+          <img src="/static/brain.png">
       </div>
-      <div class="name">INES</div> 
-      <div class="menu">
-        <ul class="ulnav">
-          <li>HOME</li>
-          <li>TEAM</li>
-          <li>RESEARCH</li>
-          <li>GALLERY</li>
-          <li>BLOG</li>
-        </ul>
-      </div>
-    </header>
-    <nav>
-      <aside>
-        <div class="side1">MENU</div>
-        <div class="side2">
-          <ul>
-            <li>TEAM</li>
-            <li>MEMBER</li>
-            <li>HISTORY</li>
-            <li>CONTACT US</li>
-          </ul>
-        </div>
-      </aside>
-      <div class="icon1">
-        <div class="scene">
-          <div class="carousel">
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle1.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle2.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle3.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle4.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle1.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle2.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle3.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle4.png" class="img_icon"/></a></div>
-            <div class="carousel__cell"><a href="/"><img src="/static/images/logo/dalle1.png" class="img_icon"/></a></div>
-          </div>
-        </div>
-        <div class="icon11">
-          <button class="previous-button">Previous</button>
-          <button class="next-button">Next</button>
-        </div>
-      </div>
-      <script>
-        var carousel = document.querySelector('.carousel');
-        var cellCount = 9;
-        var selectedIndex = 0;
-  
-        function rotateCarousel() {
-          var angle = selectedIndex / cellCount * -360;
-          carousel.style.transform = 'translateZ(-288px) rotateY(' + angle + 'deg)';
-        }
-
-        var prevButton = document.querySelector('.previous-button');
-        prevButton.addEventListener( 'click', function() {
-          selectedIndex--;
-          rotateCarousel();
-        });
-
-        var nextButton = document.querySelector('.next-button');
-        nextButton.addEventListener( 'click', function() {
-          selectedIndex++;
-          rotateCarousel();
-        });
-      </script>
-    </nav>
-    <div class="midMember">
-      <ul class="mem">MEMBER</ul>
+      <h1 class="mainnav">iNES</h1>
+      <ul class="navbar">  
+          <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/main.html">HOME</a></li>
+          <li><a href="#">TEAM</a></li>
+          <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/publications.html">RESEARCH</a></li>
+          <li><a href="#">GALLERY</a></li>
+          <li><a href="https://kojungbeom.github.io/">BLOG</a></li>
+      </ul>
     </div>
-    <section>
-    </section>
-    <footer>
-      <p>&lt;footer&gt;(사이트 하단)</p>
-    </footer>
+	
+    <!--대표 이미지 부분-->
+
+    <div class="main-image-section">
+       <img src="/static/example2.jpg">
+    </div>
+    <!-- History db화 필요-->
+    <div class="contents">
+      <section class= "timeline">
+        <ul>
+          <li>
+            <div>
+            <time> 2019 </time>
+            <img src="/static/images/Kim.jpg" alt="The Mexican flag" style="width:150px;height:100px">
+            iNES was born 
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2019.03 </time>
+            <img src="/static/images/car.jpg" alt="some_text" style="width:100px;height:100px;">
+            ADAS project started
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2020 </time>
+             ADAS project finshed
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2020.03 </time>
+            ADAS project ended
+            </div>
+          </li>
+            <li>
+            <div>
+            <time> 2021 </time>
+            <img src="/static/images/car.jpg" alt="some_text" style="width:100px;height:100px;">
+            Sound Recognition Table
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2021.03 </time>
+            EDDY 개발
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2021.10 </time>
+              산림수종 빅데이터 경진대회 <b><i>은상</i></b> 수상
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2022 </time>
+            <img src="./img/golf.jpg" alt="some_text" style="width:100px;height:100px;">
+              GOLF BALL PROJECT
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2022.03 </time>
+            GOLF BALL started
+            </div>
+          </li>
+          <li>
+            <div>
+            <time> 2022.12 </time>
+             MATLAB AI CHALLENGE <font color=red>1st</font color=red>
+            </div>
+          </li>
+          <script src="/static/js/history.js"> </script> 
+        </ul>
+      </section>
+    </div> 
+
   </body>
+  <!--footer-->
+  <div class="footer">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h3>iNES AI team</h3>
+                <p>Address: 1234 Main Street, City Name, Country</p>
+                <p>Phone: (123) 456-7890</p>
+                <p>Email: info@company.com</p>
+            </div>
+
+            <div class="col">
+                <h3>Quick Links</h3>
+                <ul>
+                <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/main.html">HOME</a></li>
+                <li><a href="#">TEAM</a></li>
+                <li><a href="file:///C:/Users/rlaal/Desktop/iNES%20Webpage/publications.html">RESEARCH</a></li>
+                <li><a href="#">GALLERY</a></li>
+                <li><a href="https://kojungbeom.github.io/">BLOG</a></li>
+                </ul>
+            </div>
+        </div>            
+    </div> 
+  </div>
 </html>
   
