--- a/labweb/static/css/member.css
+++ b/labweb/static/css/member.css
@@ -1,117 +1,114 @@
-a {
-    text-decoration: none; /* 기본 밑줄을 제거합니다 */
-    color: #888;
-}
-.img_logo {
-    width: 65px;
-    height: 65px;
-}
-.img_icon {
-    width: 190px;
-    height: 120px;
-}
-.img_member {
-    width: 300px;
-    height: 250px;
-    margin-top: 20px;
-    display: inline-block;
-}
-.img_member > img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.member_section {
-    width: 1120px;
-    gap: 40px;
-    display: flex;
-    flex-wrap: wrap;
-}
-.photo{
-    width: 340px;
-    height: 340px;
+.row.heading h2 {
+    color: #fff;
+    font-size: 52.52px;
+    line-height: 95px;
+    font-weight: 400;
     text-align: center;
-    float: left;
-    border: dotted #BDBDBD;
+    margin: 0 0 40px;
+    padding-bottom: 20px;
+    text-transform: uppercase;
 }
-.midMember{
-    margin: 0 auto; 
-    width: 1120px;
-    height: 67px;
-    line-height: 65px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+ul{
+  margin:0;
+  padding:0;
+  list-style:none;
 }
-.nameTag{
-    margin: 0 auto; 
-    width: 300px;
-    height: 70px;
-    line-height: 70px;
+.heading.heading-icon {
+    display: block;
 }
-
-ul.mem {
-    margin: 0; /* 위아래 margin 없이 */
-    width: 1120px;
-    height: 65px;
-    font-size: 32px;
-    line-height: 65px;
-    padding: 0px;
-    text-align: center;
-    border-top: 2px solid #000000;
-    border-bottom: 2px solid #000000;
-    font-family: Nanum Gothic;
+.padding-lg {
+	display: block;
+	padding-top: 60px;
+	padding-bottom: 60px;
 }
-
-.scene {
-    border: 1px solid #CCC;
-    margin: 40px 0;
-    position: relative;
-    width: 210px;
-    height: 140px;
-    margin: 40px auto;
-    perspective: 1000px;
+.practice-area.padding-lg {
+    padding-bottom: 55px;
+    padding-top: 55px;
 }
-
-.carousel {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    transform: translateZ(-288px);
-    transform-style: preserve-3d;
-    transition: transform 1s;
+.practice-area .inner{ 
+     border:1px solid #999999; 
+	 text-align:center; 
+	 margin-bottom:28px; 
+	 padding:40px 25px;
+}
+.our-webcoderskull .cnt-block:hover {
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+    border: 0;
+}
+.practice-area .inner h3{ 
+    color:#3c3c3c; 
+	font-size:24px; 
+	font-weight:500;
+	font-family: 'Poppins', sans-serif;
+	padding: 10px 0;
+}
+.practice-area .inner p{ 
+    font-size:14px; 
+	line-height:22px; 
+	font-weight:400;
+}
+.practice-area .inner img{
+	display:inline-block;
 }
 
-.carousel__cell {
-    position: absolute;
-    width: 190px;
-    height: 120px;
-    left: 10px;
-    top: 10px;
-    border: 2px solid black;
-    line-height: 116px;
-    font-size: 80px;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-}
+
+.our-webcoderskull{
+  background: url("http://www.webcoderskull.com/img/right-sider-banner.png") no-repeat center top / cover;
   
-.carousel__cell:nth-child(9n+1) { background: hsla(  0, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+2) { background: hsla( 40, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+3) { background: hsla( 80, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+4) { background: hsla(120, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+5) { background: hsla(160, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+6) { background: hsla(200, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+7) { background: hsla(240, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+8) { background: hsla(280, 100%, 50%, 0.8); }
-.carousel__cell:nth-child(9n+0) { background: hsla(320, 100%, 50%, 0.8); }
-
-.carousel__cell:nth-child(1) { transform: rotateY(  0deg) translateZ(288px); }
-.carousel__cell:nth-child(2) { transform: rotateY( 40deg) translateZ(288px); }
-.carousel__cell:nth-child(3) { transform: rotateY( 80deg) translateZ(288px); }
-.carousel__cell:nth-child(4) { transform: rotateY(120deg) translateZ(288px); }
-.carousel__cell:nth-child(5) { transform: rotateY(160deg) translateZ(288px); }
-.carousel__cell:nth-child(6) { transform: rotateY(200deg) translateZ(288px); }
-.carousel__cell:nth-child(7) { transform: rotateY(240deg) translateZ(288px); }
-.carousel__cell:nth-child(8) { transform: rotateY(280deg) translateZ(288px); }
-.carousel__cell:nth-child(9) { transform: rotateY(320deg) translateZ(288px); }
+}
+.our-webcoderskull .cnt-block{ 
+   float:left; 
+   width:100%; 
+   background:#fff; 
+   padding:30px 20px; 
+   text-align:center; 
+   border:2px solid #d5d5d5;
+   margin: 0 0 28px;
+}
+.our-webcoderskull .cnt-block figure{
+   width:148px; 
+   height:148px; 
+   border-radius:100%; 
+   display:inline-block;
+   margin-bottom: 15px;
+}
+.our-webcoderskull .cnt-block img{ 
+   width:148px; 
+   height:148px; 
+   border-radius:100%; 
+}
+.our-webcoderskull .cnt-block h3{ 
+   color:#2a2a2a; 
+   font-size:20px; 
+   font-weight:500; 
+   padding:6px 0;
+   text-transform:uppercase;
+}
+.our-webcoderskull .cnt-block h3 a{
+  text-decoration:none;
+	color:#2a2a2a;
+}
+.our-webcoderskull .cnt-block h3 a:hover{
+	color:#337ab7;
+}
+.our-webcoderskull .cnt-block p{ 
+   color:#2a2a2a; 
+   font-size:13px; 
+   line-height:20px; 
+   font-weight:400;
+}
+.our-webcoderskull .cnt-block .follow-us{
+	margin:20px 0 0;
+}
+.our-webcoderskull .cnt-block .follow-us li{ 
+    display:inline-block; 
+	width:auto; 
+	margin:0 5px;
+}
+.our-webcoderskull .cnt-block .follow-us li .fa{ 
+   font-size:24px; 
+   color:#767676;
+}
+.our-webcoderskull .cnt-block .follow-us li .fa:hover{ 
+   color:#025a8e;
+}
