--- a/labweb/templates/labweb/member.html
+++ b/labweb/templates/labweb/member.html
@@ -3,20 +3,32 @@
 
 
 {% block style %}
-  <link rel="stylesheet" href="/static/css/member.css">
+  <style>
+    .card-img-top {
+      height: 300px; /* set the height of the image container */
+      object-fit: cover; /* crop and scale the image to fit the container */
+    }
+    .card-img-top:hover {
+      content: var(--hover-image);
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
+
   <div class="container">
-    <div class="row row-cols-1 row-cols-md-3">
+    <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
+      <li style=" display:inline-block;"><h3>Members</h3></li>
+    </ul>
+    <div class="row">
       {% if member_list %}
         {% for member in member_list %}
-          <div class="col mb-3">
+          <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="{{member.ID_photo_path_text}}" class="card-img-top" style="min-width: 100%; width: auto; height: auto;" alt="...">
+                <img class="card-img-top" src="{{member.ID_photo_path_text}}" alt="Card image" style="--hover-image: url({{member.second_photo_path}})">
               <div class="card-body">
-                <h5 class="card-title">{{member.name_text}}</h5>
-                <p class="card-text">{{member.name_text}}</p>
+                <h4 class="card-title">{{member.name_text}}</h4>
+                <p class="card-text">{{member.one_sentence_text}}</p>
               </div>
             </div>
           </div>
