--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -4,8 +4,21 @@
     {% block style %}
     {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <style>
+      .carousel-item {
+        height: 400px; /* 원하는 높이 설정 */
+        overflow: hidden; /* 내용물이 컨테이너 크기를 벗어나면 잘라내기 */
+      }
+
+      .carousel-item img {
+        height: 100%; /* 컨테이너의 높이에 맞춰 이미지 크기 조정 */
+        object-fit: cover; /* 이미지의 가로세로 비율을 유지하며, 이미지가 빈 공간을 채우도록 함 */
+      }
+
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    
   </head>
   <body>
     <div class="container">
@@ -37,7 +50,35 @@
           </ul>
         </div>
       </nav>
-      <img src="/static/car.jpg" class="img-fluid mx-auto d-block" alt="Responsive image" style="width: 100%;">
+
+      <!--slide image-->
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/static/car.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/example2.jpg" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="/static/brain.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>
+      <!--<img src="/static/car.jpg" class="img-fluid mx-auto d-block" alt="Responsive image" style="width: 100%;">-->
     </div>
     {% block content %}
     {% endblock %}  
