--- a/labweb/templates/labweb/projects.html
+++ b/labweb/templates/labweb/projects.html
@@ -4,24 +4,55 @@
 
 {% block style %}
   <link rel="stylesheet" href="/static/css/member.css">
+  <style>
+    .title-text{
+      color: black;
+    }
+    .title-text:hover{
+      color: grey;
+    }
+    .card-text{
+      text-align: justify;
+    }
+  </style>
 {% endblock %}
 
 {% block content %}
-  <div class="container">
-    <div class="row row-cols-1 row-cols-md-3">
-      {% if member_list %}
-        {% for member in member_list %}
-          <div class="col mb-3">
-            <div class="card">
-              <img src="{{member.ID_photo_path_text}}" class="card-img-top" style="min-width: 100%; width: auto; height: auto;" alt="...">
-              <div class="card-body">
-                <h5 class="card-title">{{member.name_text}}</h5>
-                <p class="card-text">{{member.name_text}}</p>
-              </div>
-            </div>
+
+<div class="container">
+  <ul class="border-top border-bottom border-dark mt-2 md-2 p-0" style="width: 100%; text-align:center">
+    <li style=" display:inline-block;"><h3>Projects</h3></li>
+  </ul>
+<div class="mx-auto card mb-3" style="max-width: 1100px; margin-top: 10px;" >
+  <div class="row no-gutters">
+    {%if article_list%}
+      {%for article in article_list%}
+        <div class="col-md-4" style="max-width: 500px;" >
+          <img src="{{article.article_photo_path}}" class="img-thumbnail" style="width: 50%; width: auto; height: auto;" alt="...">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h5 class="card-title"><a href="/projects/{{article.id}}/">{{article.article_name}}</h5></a>
+            <p class="card-text">{{article.article_abstract}}</p>
+            <p class="card-text"><small class="text-muted">{{article.article_keywords}}</small></p>
           </div>
+        </div>
         {% endfor %}
       {% endif %}
-    </div>
   </div>
+</div>
+</div>
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      <a class="page-link">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
 {% endblock %}  
