--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -33,7 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav border-top border-bottom border-dark" style="width: 100%;">
             <li class="nav-item text-center" style="width: 20%;">
-              <a class="nav-link" href="/member/#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/home/#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item text-center" style="width: 20%;">
               <a class="nav-link" href="/member/#">TEAM</a>
