--- a/labweb/templates/labweb/gallery.html
+++ b/labweb/templates/labweb/gallery.html
@@ -18,7 +18,7 @@
               <img src="{{photo.photo_path}}" class="card-img-top" style="min-width: 100%; width: auto; height: auto;" alt="...">
               <div class="card-body">
                 <h5 class="card-title">{{photo.photo_title}}</h5>
-                <p class="card-text">{{photo.photo_context}}, {{ photo.photo_dates|date:"F Y" }}. </p>
+                <p class="card-text">{{photo.photo_context}} </p>
               </div>
             </div>
           </div>
