--- a/labweb/templates/labweb/base.html
+++ b/labweb/templates/labweb/base.html
@@ -5,6 +5,15 @@
     {% endblock %}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <style>
+      @font-face{
+        font-family: 'Big Caslon Medium';
+        src: url('../fonts/Big Caslon Medium.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+      body {
+        font-family: "Big Caslon Medium", sans-serif;
+      }
       .carousel-item {
         height: 400px; /* 원하는 높이 설정 */
         overflow: hidden; /* 내용물이 컨테이너 크기를 벗어나면 잘라내기 */
