--- a/labweb/templates/labweb/home.html
+++ b/labweb/templates/labweb/home.html
@@ -4,7 +4,6 @@
     <script src="/static/js/home.js"></script>
 </head>
 <body>
-    <div class="container">
         <section class="nav">
             <h1>iNES</h1>
             <h3 class="span loader">
@@ -15,7 +14,7 @@
                 
             </h3>
             <div class="nav-container">
-                    <a class="nav-tab" href="/member/#">Team</a>
+                    <a class="nav-tab" href="/home/#">Team</a>
                     <a class="nav-tab" href="/publication/">Research</a>
                     <a class="nav-tab" href="/projects/#">Projects</a>
                     <a class="nav-tab" href="/gallery/#">Gallery</a>
@@ -24,5 +23,4 @@
         </section>
         
         <canvas class="background"></canvas>
-    </div>
 </body>  
