--- a/labweb/templates/labweb/homev2.html
+++ b/labweb/templates/labweb/homev2.html
@@ -10,7 +10,8 @@
 
 </head>
 <body>
-    <div>
+ 
+
         <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" >
             <a class="navbar-brand" href="#">iNES</a>
@@ -21,7 +22,7 @@
               <ul class="navbar-nav">
                 <!-- HOME -->
                 <li class="nav-item active">
-                  <a class="nav-link" href="./homev2.html">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="/home/#">Home <span class="sr-only">(current)</span></a>
                 </li>
            
                 <!--About US-->
@@ -30,8 +31,8 @@
                     About Us
                   </a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="./member.html">People</a>
-                    <a class="dropdown-item" href="./history.html">History</a>
+                    <a class="dropdown-item" href="/member/#">People</a>
+                    <a class="dropdown-item" href="/history/#">History</a>
                     <a class="dropdown-item" href="#">AI team Blog</a>
                   </div>
                 </li>
@@ -43,7 +44,7 @@
                     </a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="#">Research Topic</a>
-                      <a class="dropdown-item" href="./projects.html">Project</a>
+                      <a class="dropdown-item" href="/projects/">Project</a>
                     </div>
                 </li>
 
@@ -54,7 +55,7 @@
                     </a>
                     <div class="dropdown-menu">
                       <a class="dropdown-item" href="#">Conference</a>
-                      <a class="dropdown-item" href="./publication.html">Journal</a>
+                      <a class="dropdown-item" href="/publication/#">Journal</a>
                     </div>
                 </li>
 
@@ -64,19 +65,32 @@
                         Board
                     </a>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="./awards.html">Award</a>
-                      <a class="dropdown-item" href="./gallery.html">GAllery</a>
+                      <a class="dropdown-item" href="/awards/#">Award</a>
+                      <a class="dropdown-item" href="/gallery/#">GAllery</a>
                     </div>
                 </li>
 
                 <!--Contact Us-->
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact Us</a>
+                    <a class="nav-link" href="contact/#/">Contact Us</a>
                   </li>
               </ul>
             </div>
           </nav>
         </div>
+        <section class="title">
+            <h1>iNES</h1>
+            <h3 class="span loader">
+                <span class="m">Intelligent</span><br>
+                <span class="m">Nano-Bio</span><br>
+                <span class="m">Electronic</span><br>
+                <span class="m">System</span>
+                
+            </h3>
+            
+        </section>
+        
+        <canvas class="background"></canvas>
 
 
 </body>  
